--- a/src/assets/styles/operator/Sidebar.module.scss
+++ b/src/assets/styles/operator/Sidebar.module.scss
@@ -7,6 +7,11 @@
    background-color: #1e4a89;
    padding-inline: 20px;
    padding-top: 29px;
+   transition: 1s;
+   -webkit-transition: 1s;
+   -moz-transition: 1s;
+   -ms-transition: 1s;
+   -o-transition: 1s;
 }
 
 .childrenBlock {
@@ -55,6 +60,15 @@
       border-radius: 15px;
       background: rgba(255, 255, 255, 0.2);
       z-index: 10;
+      transition: 0.5s;
+      -webkit-transition: 0.5s;
+      -moz-transition: 0.5s;
+      -ms-transition: 0.5s;
+      -o-transition: 0.5s;
+
+      &:hover {
+         background: rgba(181, 181, 181, 0.2);
+      }
    }
 }
 
@@ -73,6 +87,15 @@
    border-radius: 15px;
    background: rgba(255, 255, 255, 0.2);
    z-index: 10;
+   transition: 0.5s;
+   -webkit-transition: 0.5s;
+   -moz-transition: 0.5s;
+   -ms-transition: 0.5s;
+   -o-transition: 0.5s;
+
+   &:hover {
+      background: rgba(181, 181, 181, 0.2);
+   }
 }
 
 .switchBlock {
